--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .App {
     margin-top: 20px;
-    margin-right: 300px;
-    margin-left: 100px;
-    padding-left: 100px;
+    margin-right: 30%;
+    margin-left: 30%;
     border-style: solid;
-    background-color: aqua;
+    background-color: rgb(176, 177, 175);
     text-align: center;
+    border-radius: 30px;
 }
 
 .EditButton {
